--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "xflow-extend",
-  "version": "1.0.12",
-  "description": "**XFlow Extend** 是基于 [XFlow](https://github.com/antvis/XFlow) 的扩展项目，旨在简化流程图编辑器的开发，提高开发效率。它提供了简单易用的 API，可以自定义节点、连接线、流程图属性和节点设置器等。",
+  "name": "xflow-automation",
+  "version": "0.0.1",
+  "description": "**XFlow Automation** 是基于 [XFlow](https://github.com/antvis/XFlow) 的扩展项目，旨在简化流程图编辑器的开发，提高开发效率。它提供了简单易用的 API，可以自定义节点、连接线、流程图属性和节点设置器等。",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shitiandmw/xflow-extend.git"
+    "url": "git+https://github.com/shitiandmw/xflow-automation.git"
   },
   "author": "shitiandmw",
   "license": "SEE LICENSE IN LICENSE.md",
   "bugs": {
-    "url": "https://github.com/shitiandmw/xflow-extend/issues"
+    "url": "https://github.com/shitiandmw/xflow-automation/issues"
   },
-  "homepage": "https://github.com/shitiandmw/xflow-extend#readme",
+  "homepage": "https://github.com/shitiandmw/xflow-automation#readme",
   "scripts": {
     "start": "vite",
     "build": "tsc -b && vite build",
@@ -24,6 +24,7 @@
     "@antv/xflow": "^2.1.6",
     "eventemitter3": "^5.0.1",
     "less": "^4.2.0",
+    "lodash": "^4.17.21",
     "nanoid": "^5.0.7"
   },
   "peerDependencies": {
